// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityStoreCrudClient update entities bulk when valid create entities 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "index": ".entities.v1.updates.security_user_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "user": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "user-id",
              },
              "name": "user-id",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_host_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "host": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "host-id",
              },
              "name": "host-id",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_service_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "service": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "service-id",
              },
              "name": "service-id",
            },
          },
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "service": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "service-id-2",
              },
              "name": "service-id-2",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_generic_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "entity": Object {
              "attributes": Object {
                "Privileged": true,
              },
              "id": "generic-id",
            },
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`EntityStoreCrudClient update entities bulk when valid create entity using force 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "index": ".entities.v1.updates.security_user_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "user": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "user-id",
              },
              "name": "user-id",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_host_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "host": Object {
              "entity": Object {
                "id": "host-id",
              },
              "id": Array [
                "123",
              ],
              "name": "host-id",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_service_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "service": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "service-id",
              },
              "name": "service-id",
            },
          },
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "service": Object {
              "entity": Object {
                "attributes": Object {
                  "Privileged": true,
                },
                "id": "service-id-2",
              },
              "name": "service-id-2",
            },
          },
        ],
      },
    ],
    Array [
      Object {
        "index": ".entities.v1.updates.security_generic_default",
        "operations": Array [
          Object {
            "create": Object {},
          },
          Object {
            "@timestamp": "2025-09-03T07:56:22.038Z",
            "entity": Object {
              "attributes": Object {
                "Privileged": true,
              },
              "id": "generic-id",
            },
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
